--- a/project.html
+++ b/project.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0"/>
-    <title>Sagun Shrestha</title>
+    <title>Israel Peled</title>
 
-    <meta name="title" content="Sagun Shrestha: Projects">
-    <meta name="description" content="Sagun Shrestha: Projects">
+    <meta name="title" content="Israel Peled: Projects">
+    <meta name="description" content="Israel Peled: Projects">
 
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Sagun Shrestha: Projects">
-    <meta property="og:url" content="sagunshrestha.com">
-    <meta property="og:title" content="Sagun Shrestha: Projects">
-    <meta property="og:description" content="Sagun Shrestha: Projects">
+    <meta property="og:site_name" content="Israel Peled: Projects">
+    <meta property="og:url" content="israrelpeled.com">
+    <meta property="og:title" content="Israel Peled: Projects">
+    <meta property="og:description" content="Israel Peled: Projects">
     <meta property="og:image" content="https://i.ibb.co/rycC9vt/d-Izcnbyv-400x400.jpg">
 
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:url" content="sagunshrestha.com">
-    <meta property="twitter:title" content="Sagun Shrestha: Projects">
-    <meta property="twitter:description" content="Sagun Shrestha: Projects">
+    <meta property="twitter:url" content="israelpeled.com">
+    <meta property="twitter:title" content="Israel Peled: Projects">
+    <meta property="twitter:description" content="Israel Peled: Projects">
     <meta property="twitter:image" content="https://i.ibb.co/rycC9vt/d-Izcnbyv-400x400.jpg">
     <meta property="twitter:image:src" content="https://i.ibb.co/rycC9vt/d-Izcnbyv-400x400.jpg">
 
